correct margin overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -26,7 +27,7 @@ div#logo {
   justify-content: center;
   align-items: center;
   height: 15vh;
-  margin-top: 20vh;
+  margin-top: calc(20vh + 3px);
   width: 28vw;
 }
 
